Add Locks