@@ -1,43 +1,56 @@
 package telran.employees.services;
 
-import java.io.FileOutputStream;
-import java.io.ObjectOutputStream;
+import java.io.*;
 import java.time.LocalDate;
 import java.util.*;
+import java.util.concurrent.locks.*;
 import java.util.stream.Collectors;
-
-import telran.employees.dto.Employee;
-import telran.employees.dto.EmployeesCodes;
-import telran.employees.dto.SalaryRangeEmployees;
+import telran.employees.dto.*;
 
 public class EmployeesMethodsMapsImpl implements EmployeesMethods {
 
 	private static final long serialVersionUID = 1L;
-	private HashMap<Long, Employee> employees = new HashMap<>();
-	private HashMap<String, List<Employee>> employeesDep = new HashMap<>();
-	private TreeMap<Integer, List<Employee>> employeesSalary = new TreeMap<>();
-	private TreeMap<Integer, List<Employee>> employeesAge = new TreeMap<>();
+	private final HashMap<Long, Employee> employees = new HashMap<>();
+	private final HashMap<String, List<Employee>> employeesDep = new HashMap<>();
+	private final TreeMap<Integer, List<Employee>> employeesSalary = new TreeMap<>();
+	private final TreeMap<Integer, List<Employee>> employeesAge = new TreeMap<>();
 
-//	public static EmployeesMethods getEmployees(String filePath) throws Exception {
-//		try (var input = new ObjectInputStream(new FileInputStream(filePath))) {
-//			return (EmployeesMethods) input.readObject();
-//		} 
-//	}
-	
+	// Lock Farm
+	final static ReentrantReadWriteLock employeesLock = new ReentrantReadWriteLock();
+	final static Lock employeesLockRead = employeesLock.readLock();
+	final static Lock employeesLockWrite = employeesLock.writeLock();
+
+	final static ReentrantReadWriteLock employeesDepLock = new ReentrantReadWriteLock();
+	final static Lock employeesDepLockRead = employeesDepLock.readLock();
+	final static Lock employeesDepLockWrite = employeesDepLock.writeLock();
+
+	final static ReentrantReadWriteLock employeesSalaryLock = new ReentrantReadWriteLock();
+	final static Lock employeesSalaryLockRead = employeesSalaryLock.readLock();
+	final static Lock employeesSalaryLockWrite = employeesSalaryLock.writeLock();
+
+	final static ReentrantReadWriteLock employeesAgeLock = new ReentrantReadWriteLock();
+	final static Lock employeesAgeLockRead = employeesAgeLock.readLock();
+	final static Lock employeesAgeLockWrite = employeesAgeLock.writeLock();
+
 	public static EmployeesMethods getEmptyEmloyees() {
 		return new EmployeesMethodsMapsImpl();
 	}
 
 	@Override
 	public EmployeesCodes addEmployee(Employee employee) {
-		var result = employees.putIfAbsent(employee.getId(), employee);
-		if (result != null) { return EmployeesCodes.ALREADY_EXISTS; }
-		addEmployeeDep(employee);
-		addEmployeeSalary(employee);
-		addEmployeeAge(employee);
-		return EmployeesCodes.OK;
+		lockAll(true);
+		try {
+			var result = employees.putIfAbsent(employee.getId(), employee);
+			if (result != null) { return EmployeesCodes.ALREADY_EXISTS; }
+			addEmployeeDep(employee);
+			addEmployeeSalary(employee);
+			addEmployeeAge(employee);
+			return EmployeesCodes.OK;
+		} finally {
+			lockAll(false);
+		}
 	}
-	
+
 	private void addEmployeeAge(Employee employee) {
 		employeesAge.computeIfAbsent(employee.getBirthDate().getYear(), __ -> new LinkedList<>()).add(employee);
 	}
@@ -52,12 +65,17 @@ public class EmployeesMethodsMapsImpl implements EmployeesMethods {
 
 	@Override
 	public EmployeesCodes removeEmployee(long id) {
-		var removedEmployee = employees.remove(id);
-		if (removedEmployee == null) { return EmployeesCodes.NOT_FOUND; }
-		removeFromDepartmentList(removedEmployee);
-		removeFromSalaryList(removedEmployee);
-		removeFromAgeList(removedEmployee);
-		return EmployeesCodes.OK;
+		lockAll(true);
+		try {
+			var removedEmployee = employees.remove(id);
+			if (removedEmployee == null) { return EmployeesCodes.NOT_FOUND; }
+			removeFromDepartmentList(removedEmployee);
+			removeFromSalaryList(removedEmployee);
+			removeFromAgeList(removedEmployee);
+			return EmployeesCodes.OK;
+		} finally {
+			lockAll(false);
+		}
 	}
 
 	private void removeFromAgeList(Employee removedEmployee) {
@@ -66,7 +84,6 @@ public class EmployeesMethodsMapsImpl implements EmployeesMethods {
 			if (value.size() == 0) { return null; }
 			return value;
 		});
-		//		employeesAge.get(removedEmployee.getBirthDate().getYear()).remove(removedEmployee);
 	}
 
 	private void removeFromSalaryList(Employee removedEmployee) {
@@ -75,7 +92,6 @@ public class EmployeesMethodsMapsImpl implements EmployeesMethods {
 			if (value.size() == 0) { return null; }
 			return value;
 		});
-		//		employeesSalary.get(removedEmployee.getSalary()).remove(removedEmployee);
 	}
 
 	private void removeFromDepartmentList(Employee removedEmployee) {
@@ -84,27 +100,26 @@ public class EmployeesMethodsMapsImpl implements EmployeesMethods {
 			if (value.size() == 0) { return null; }
 			return value;
 		});
-		//		employeesDep.get(removedEmployee.getDepartment()).remove(removedEmployee);
 	}
 
 	@Override
 	public EmployeesCodes updateSalary(long id, int newSalary) {
-		var replacingEmployee = getEmployee(id);
-		if (replacingEmployee == null) { return EmployeesCodes.NOT_FOUND; }
-		if (replacingEmployee.getSalary() == newSalary) { return EmployeesCodes.NO_UPDATE_REQUIRED; }
-		Employee newEmployeeye = new Employee(id, newSalary, replacingEmployee.getBirthDate(), replacingEmployee.getDepartment());
-		replaceEmployee(replacingEmployee, newEmployeeye);
-		return EmployeesCodes.OK;
+			var replacingEmployee = getEmployee(id);
+			if (replacingEmployee == null) { return EmployeesCodes.NOT_FOUND; }
+			if (replacingEmployee.getSalary() == newSalary) { return EmployeesCodes.NO_UPDATE_REQUIRED; }
+			Employee newEmployeeye = new Employee(id, newSalary, replacingEmployee.getBirthDate(), replacingEmployee.getDepartment());
+			replaceEmployee(replacingEmployee, newEmployeeye);
+			return EmployeesCodes.OK;
 	}
 
 	@Override
 	public EmployeesCodes updateDepartment(long id, String newDepartment) {
-		var replacingEmployee = getEmployee(id);
-		if (replacingEmployee == null) { return EmployeesCodes.NOT_FOUND; }
-		if (replacingEmployee.getDepartment().equals(newDepartment)) { return EmployeesCodes.NO_UPDATE_REQUIRED; }
-		Employee newEmployee = new Employee(id, replacingEmployee.getSalary(), replacingEmployee.getBirthDate(), newDepartment);
-		replaceEmployee(replacingEmployee, newEmployee);
-		return EmployeesCodes.OK;
+			var replacingEmployee = getEmployee(id);
+			if (replacingEmployee == null) { return EmployeesCodes.NOT_FOUND; }
+			if (replacingEmployee.getDepartment().equals(newDepartment)) { return EmployeesCodes.NO_UPDATE_REQUIRED; }
+			Employee newEmployee = new Employee(id, replacingEmployee.getSalary(), replacingEmployee.getBirthDate(), newDepartment);
+			replaceEmployee(replacingEmployee, newEmployee);
+			return EmployeesCodes.OK;
 	}
 
 	private void replaceEmployee(Employee replacingEmploeey, Employee newEmploeey) {
@@ -114,7 +129,12 @@ public class EmployeesMethodsMapsImpl implements EmployeesMethods {
 
 	@Override
 	public Employee getEmployee(long id) {
-		return employees.get(id);
+		lock(employeesLockRead);
+		try {
+			return employees.get(id);
+		} finally {
+			unLock(employeesLockRead);
+		}
 	}
 
 	private static <T> Iterable<Employee> getSubMapResult(TreeMap<T, List<Employee>> treeMap, T from, T to) {
@@ -123,68 +143,130 @@ public class EmployeesMethodsMapsImpl implements EmployeesMethods {
 
 	@Override
 	public Iterable<Employee> getEmployessBySalary(int fromInclusive, int toExclusive) {
-		return getSubMapResult(employeesSalary, fromInclusive, toExclusive);
+		lock(employeesSalaryLockRead);
+		try {
+			return getSubMapResult(employeesSalary, fromInclusive, toExclusive);
+		} finally {
+			unLock(employeesSalaryLockRead);
+		}
 	}
 
 	@Override
 	public Iterable<Employee> getEmployeesByAge(int fromInclusive, int toExclusive) {
-		var currentYear = LocalDate.now().getYear();
-		var minYear = currentYear - toExclusive + 1;
-		var maxYear = currentYear - fromInclusive + 1;		
-		return getSubMapResult(employeesAge, minYear, maxYear);
+		lock(employeesAgeLockRead);
+		try {
+			var currentYear = LocalDate.now().getYear();
+			var minYear = currentYear - toExclusive + 1;
+			var maxYear = currentYear - fromInclusive + 1;
+			return getSubMapResult(employeesAge, minYear, maxYear);
+		} finally {
+			unLock(employeesAgeLockRead);
+		}
 	}
 
 	@Override
 	public Iterable<Employee> getEmployeesByDepartment(String department) {
-		var result = employeesDep.get(department);
-		return result == null ? Collections.emptyList() : result;
+		lock(employeesDepLockRead);
+		try {
+			var result = employeesDep.get(department);
+			return result == null ? Collections.emptyList() : result;
+		} finally {
+			unLock(employeesDepLockRead);
+		}
 	}
 
 	@Override
 	public Iterable<Employee> getAllEmployees() {
-		return employees.values();		
+		lock(employeesLockRead);
+		try {
+			return employees.values();
+		} finally {
+			unLock(employeesLockRead);
+		}		
 	}
 
 	@Override
 	public Map<String, Integer> getDepartmentsSalary() {
-		return employeesDep
-				.entrySet()
-				.stream()
-				.collect(Collectors.toMap(
-						department -> department.getKey(), // Map.Entry::getKey
-						list -> (int) list.getValue() 
-						.stream()
-						.mapToInt(empl -> empl.getSalary()) // Employee::getSalary
-						.average().orElse(0)));
+		lock(employeesDepLockRead);
+		try {
+			return employeesDep.entrySet().stream()
+					.collect(Collectors.toMap(department -> department.getKey(), // Map.Entry::getKey
+							list -> (int) list.getValue().stream()
+							.mapToInt(empl -> empl.getSalary()) // Employee::getSalary		
+							.average().orElse(0)));
+		} finally {
+			unLock(employeesDepLockRead);
+		}
 	}
 
 	@Override
 	public List<SalaryRangeEmployees> distibutionSalary(int intervalStep) {
-		return employees.values().stream()
-				.collect(Collectors.groupingBy(e -> 
-				e.getSalary() / intervalStep, 
-				TreeMap::new, 
-				Collectors.toList()))
-				.entrySet()
-				.stream()
-				.map(e -> {
-					int nInterval = e.getKey();
-					int minSalary = nInterval * intervalStep;
-					return new SalaryRangeEmployees(
-							minSalary, 
-							minSalary + intervalStep, 
-							e.getValue()); 
-				})
-				.toList();
+		lock(employeesLockRead);
+		try {
+			return employees.values().stream()
+					.collect(Collectors.groupingBy(e -> 
+					e.getSalary() / intervalStep, 
+					TreeMap::new, 
+					Collectors.toList()))
+					.entrySet()
+					.stream()
+					.map(e -> {
+						int nInterval = e.getKey();
+						int minSalary = nInterval * intervalStep;
+						return new SalaryRangeEmployees(
+								minSalary, 
+								minSalary + intervalStep, 
+								e.getValue()); 
+					})
+					.toList();
+		} finally {
+			unLock(employeesLockRead);
+		}
 	}
 
 	@Override
 	public void save(String filePath) throws Exception {
-		try (var output = new ObjectOutputStream(new FileOutputStream(filePath))) {
-			output.writeObject(this);
+		lockAll(true);
+		try {
+			try (var output = new ObjectOutputStream(new FileOutputStream(filePath))) {
+				output.writeObject(this);
+			} 
+		} finally {
+			lockAll(false);
 		}
 	}
 
+	// Lock managment
+
+	private void lock(Lock lock) {
+		lock.lock();
+	}
+
+	private void unLock(Lock lock) {
+		lock.unlock();
+	}
+
+	private void lockAll(Boolean status) {
+		if (status) {
+			employeesLockRead.lock();
+			employeesLockWrite.lock();
+			employeesDepLockRead.lock();
+			employeesDepLockWrite.lock();
+			employeesSalaryLockRead.lock();
+			employeesSalaryLockWrite.lock();
+			employeesAgeLockRead.lock();
+			employeesAgeLockWrite.lock();
+		} else {
+			employeesLockRead.unlock();
+			employeesLockWrite.unlock();
+			employeesDepLockRead.unlock();
+			employeesDepLockWrite.unlock();
+			employeesSalaryLockRead.unlock();
+			employeesSalaryLockWrite.unlock();
+			employeesAgeLockRead.unlock();
+			employeesAgeLockWrite.unlock();
+		}
+	}
 
 
 }
